--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,77 @@
 :root {
   --background: #121721;
-
   --text-color: #fff;
 }
 
-body {
+html, body, button {
   background-color: var(--background);
   font-family: Inter, sans-serif;
   color: var(--text-color);
   text-align: center;
+  vertical-align: baseline;
+
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  overflow: visible;
 }
 
-/* Hero Section /
+/* Hero Section */
 #hero-section {
-  height: 100vh; / Define a altura como 100% da altura do viewport /
+  height: 100vh;
+  margin: 2rem;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+
+  gap: 2rem;
 }
 
 .hero-content h2 {
- font-weight: 400;
+  font-weight: 400;
 }
 
 .hero-content h3 {
   font-weight: 400;
- }
+}
 
- .hero-content button {
-  font-weight: 700;
+.hero-content button {
+  font-size: 1.25rem;
+  font-weight: 500;
   color: var(--text-color);
-  letter-spacing: 0.1rem;
-  padding: 1.4375rem 1.25rem 1.3125rem 0.875rem;
+  padding: 1.5rem 1.25rem 1.5rem 1.25rem;
   align-items: center;
   border-radius: 0.5rem;
   background: #2B6BB1;
- }
 
- .hero-content button:hover {
+  cursor: pointer;
+}
+
+.hero-content button:hover {
   transform: scale(1.1);
-  color: var(--background);
-  background: #fff;
- }
+  filter: opacity(0.9);
+}
 
-
-/ Info Tec Section /
+/* Info Tec Section */
 #tec-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  margin: 4rem;
+  margin-top: 8rem;
 }
 
 #tec-section .title-tec {
   font-size: 2.25rem;
-  margin-bottom: 7.5rem;
+  margin-bottom: 4rem;
 }
 
 .container-cards {
@@ -62,7 +82,7 @@ body {
   gap: 2rem;
 }
 
-/ Card */
+/* Card */
 .card {
   background-color: #1A212D;
   border-radius: 16px;
@@ -92,7 +112,6 @@ body {
   height: 120px;
   width: 200px;
 }
-
 
 .card-description {
   word-wrap: break-word;
